2008-06-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickSetImageFormat): Add method to support
	setting the image format.

2008-06-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (ProfileImage): Convert to use pixel iterators.

2008-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/channel.c (ImportImageChannel): Convert to use pixel
	iterators.
	(SetImageChannelDepth): Convert to use pixel
	iterators.
	* Magick++/lib/Image.cpp (quantize): Error measurement support was
	being performed incorrectly.  SyncImage() is not needed here.

2008-06-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/channel.c (GetImageChannelDepth): Convert to use pixel
	iterators.

2008-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (RegisterMATImage): Set blob support to false for
	MAT coder until bug related to blobs is fixed.

2008-06-16  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* mat.c Ability to read a new compressed MATLAB image format.

2008-06-15  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* mat.c, wpg.c: For empty images a message ImageFileDoesNotContainAnyImageData
	is returned.

2008-06-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/channel.c (ChannelImage): Convert to use pixel iterators.
	(ExportImageChannel): Convert to use pixel iterators.
	* coders/dpx.c (WriteDPXImage): As an experimental feature, when
	the environment variable MAGICK_RESERVE_STORAGE is set to "TRUE",
	then the DPX format writer will request the required storage from
	the filesystem in advance (if supported by the OS) or the full
	amount of memory required (when writing to an in-memory BLOB).

2008-06-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magic.c (InitializeMagicInfo): New function to initialize
	file format detection.
	(GetMagickFileFormat): New internal implementation function to
	detect file format based on file header.