@@ -1,3 +1,7 @@
+2008-06-22  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* mat.c Added CloseBlob().
+
 2008-06-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* wand/magick_wand.c (MagickSetImageFormat): Add method to support
